istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtualsvc
spec:
  hosts:
   - '*'
  gateways:
   - gateway
  http: 
   - route:
     - destination:
         host:  web.default.svc.cluster.local
         port:
           number: 8081
